test/e2e/testdata/forward-proto-config.yaml
# This is used to test forward_proto_config, which infers the x-forwarded-proto
# header from the PROXY protocol destination port.
# Traffic from http 80 is redirected to https://www.example.com:443 with proxy
# protocol enabled (injected by the BackendTrafficPolicy on the http route).
# The https listener has proxyProtocol.forwardProtoConfig set, so the request
# reaching the backend on the https listener should have x-forwarded-proto: https.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: forward-proto-gtw
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: example-com-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: forward-proto-policy
  namespace: gateway-conformance-infra
spec:
  proxyProtocol:
    forwardProtoConfig:
      httpsDestinationPorts:
        - 443
      httpDestinationPorts:
        - 80
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: forward-proto-gtw
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forward-proto-http
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - kind: Gateway
      name: forward-proto-gtw
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: www.example.com
      backendRefs:
        - group: "gateway.envoyproxy.io"
          kind: Backend
          name: forward-proto-backend
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forward-proto-https
  namespace: gateway-conformance-infra
spec:
  hostnames:
    - www.example.com
  parentRefs:
    - kind: Gateway
      name: forward-proto-gtw
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: forward-proto-btp
  namespace: gateway-conformance-infra
spec:
  proxyProtocol:
    version: V2
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: forward-proto-http
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: forward-proto-backend
  namespace: gateway-conformance-infra
spec:
  endpoints:
    - fqdn:
        # the service name of the gateway, this is not right in gateway namespace mode
        hostname: envoy-gateway-conformance-infra-forward-proto-gtw-8b69893b.envoy-gateway-system.svc
        port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: btls-forward-proto-backend
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: forward-proto-backend
  validation:
    caCertificateRefs:
      - name: example-ca
        group: ""
        kind: ConfigMap
    hostname: www.example.com
---
apiVersion: v1
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDVTCCAj2gAwIBAgIUHGXfOoYLN5xK7lgRr0Rm/rmygXkwDQYJKoZIhvcNAQEL
[...]
    tL5c35gwtorGxAWt2G9YcVlOsKWLnypSz4LbY62eiCToFFeJr1sHO10=
    -----END CERTIFICATE-----
kind: ConfigMap
metadata:
  name: example-ca
  namespace: gateway-conformance-infra
---
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVSEdYZk9vWUxONXhLN2xnUnIwUm0vcm15Z1hrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF4TURJMk5EZGFGdzB6TmpBMk1UY3hNREkyTkRkYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM4MEtzSFlVMDdLdTZuYldxUlR6SjJxczZiV3pPRVEwMGhYYjlNemlxcwoyQ2d3Yk00djhVNWIvUD [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVTjhYcXM2RjdZV1dOTGlXYmExMUJVZzdZVGVNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF4TURJMk5EaGFGdzB6TmpBMk1UY3hNREkyTkRoYU1Ea3hHREFXQmdOVkJBTU1EM2QzCmR5NWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEQnAzTUhST3hBYU04TXplTjdxaGNWYjAxbAo3YUphUkhqWDIrZm5vT [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRREJwM01IUk94QWFNOE0KemVON3FoY1ZiMDFsN2FKYVJIalgyK2Zub05KRWZWbExTdkdmVVNHS1UwNjYwWHFnUmVCQ2REK3NMTFM3KzdmZgplcHRSSTlVYVJITnhOMGdIWmpEZ0h1cHFzT3JoaEtYZWFYRGYxbDVqai8xNDhodVo4d3U3L0xId2ZBdy9CSkV0CmlPbWxIOWJxV0xWR0N1OUlJbk1DMTkzaWpFTHdwU0REK2sxVEY4bTBFVzQwREZlWk5FZTE3bEpFYTI3VSt1UDYKZHJidDlQc1ZXNTFVUTk0bVVjSEdrZno2eEp4SWpFaGR6ZTlqcDZPcUV1bW9oWDd1TWgvNnJ2c2M3ZVNlU2l1LwpsekJrSGdRZTNHckhrW [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: example-com-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
